# eolian

./: .gitignore  CMakeLists.txt  TODO
example/: ElmWin.eo  EvasImage.eo  EvasObjectImage.eo  EvasObjectImage_json.eo  ObjChild.eo  ObjParent.eo
src/lib/: CMakeLists.txt  Eolian.h  ch_parser.c  ch_parser.h  database.c  database.h  eina_json.c  eina_json.h  eo_definitions.c  eo_definitions.h  eo_lexer.h  eo_lexer.rl  eo_lexer_no_ragel.c  eo_parser.c  eolian.c  lexer.c  lexer.h
src/tests/: CMakeLists.txt  start  suite.c
